Bug fix for production build

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,14 +10,14 @@
 	  <mat-card-content>
       	<form [formGroup]="loginForm" (ngSubmit)="onFormSubmit(loginForm.value)">
 		  <mat-form-field class="login-full-width">
-		    <input matInput placeholder="Username/Email" formControlName="username" [errorStateMatcher]="matcher">
+		    <input matInput placeholder="Username/Email" formControlName="username" >
 		    <mat-error>
 		      <span *ngIf="!loginForm.get('username').valid && loginForm.get('username').touched">Please enter username/email</span>
 		    </mat-error>
 		  </mat-form-field>
 
 		  <mat-form-field class="login-full-width">
-		    <input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password' : 'text'" [errorStateMatcher]="matcher">
+		    <input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password' : 'text'" >
 		    <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
 		    <mat-error>
 		      <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">Please enter password</span>
