--- a/src/app/components/quiz/quiz-edit/quiz-edit.component.html
+++ b/src/app/components/quiz/quiz-edit/quiz-edit.component.html
@@ -4,8 +4,7 @@
 <form [formGroup]="quizForm" (ngSubmit)="onFormSubmit(quizForm.value)">
   Value: {{ quizForm.value | json }}
   <mat-form-field class="full-width">
-    <input matInput placeholder="Quiz Name" formControlName="name"
-           [errorStateMatcher]="matcher">
+    <input matInput placeholder="Quiz Name" formControlName="name">
     <mat-error>
       <span *ngIf="!quizForm.get('name').valid && quizForm.get('name').touched">Please enter Quiz Name</span>
     </mat-error>
