--- a/src/app/components/quiz/quiz-detail/quiz-detail.component.html
+++ b/src/app/components/quiz/quiz-detail/quiz-detail.component.html
@@ -39,7 +39,9 @@
     </div>
   </mat-expansion-panel>
 </mat-accordion>
-
+<div *ngIf="chart">
+  <canvas id="canvas">{{ chart }}</canvas>
+</div>
 <div class="button-row">
   <button *ngFor="let result of quizResults; let index = index" mat-raised-button color="primary" matBadge="{{ result.correctAnswerCount }}" matBadgePosition="after" matBadgeColor="accent">
     {{ result.from.name }}
