--- a/src/app/components/quiz/quiz-list/quiz-list.component.html
+++ b/src/app/components/quiz/quiz-list/quiz-list.component.html
@@ -1,7 +1,7 @@
 <div class="button-row">
   <a mat-raised-button color="primary" [routerLink]="['/quiz-create']"><mat-icon>add</mat-icon></a>
-  <button mat-raised-button color="primary" (click)="startQuiz('5b69c3322e7c81238cc8afe8', true)"><mat-icon>start</mat-icon> Start</button>
-  <button mat-raised-button color="primary" (click)="startQuiz('5b69c3322e7c81238cc8afe8', false)"><mat-icon>stop</mat-icon> Stop</button>
+  <!-- <button mat-raised-button color="primary" (click)="startQuiz('5b69c3322e7c81238cc8afe8', true)"><mat-icon>start</mat-icon> Start</button>
+  <button mat-raised-button color="primary" (click)="startQuiz('5b69c3322e7c81238cc8afe8', false)"><mat-icon>stop</mat-icon> Stop</button> -->
 </div>
 <div class="example-container mat-elevation-z8">
   <table mat-table #table [dataSource]="dataSource" class="example-full-width">
