--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -44,7 +44,7 @@
     height: calc(100% - 144px);
     //overflow-x: scroll;
     position: absolute;
-    width: 98%;
+    width: calc(100% - 30px);
     background: #efe7dd url("https://i.pinimg.com/originals/a5/c2/44/a5c244761a4573da8dd2d55d66ee7b72.jpg") repeat;
     z-index: 0;
 }
@@ -83,10 +83,12 @@
     padding: 0 24px;
     overflow: scroll;
 }
+
+
 .conversation-input {
     position: absolute;
     bottom: 0;
-    width: 98%;
+    width: calc(100% - 30px);
     background-color: #fafafa;
 }
 
