--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -7,11 +7,11 @@
     </mat-card-header> -->
     <img mat-card-image src="https://cdn.dribbble.com/users/442994/screenshots/2795274/loader.gif" alt="Photo of a Shiba Inu">
     <mat-card-content>
-      <h5>Quiz will start when teacher will intiate it.. Stay here to play on time !</h5>
+      <h5>Quiz will start shortly..!</h5>
     </mat-card-content>
     <mat-card-actions>
       <button mat-button>Quiz Rules</button>
-      <button mat-raised-button color="primary" [routerLink]="['/signup']">Join Quiz</button>
+      <button *ngIf="!authService.isLoggedIn" mat-raised-button color="primary" [routerLink]="['/signup']">Join Quiz</button>
     </mat-card-actions>
   </mat-card>
 </div>
@@ -34,13 +34,13 @@
               <mat-checkbox id="{{option.id}}" [(ngModel)]="option.selected" (change)="onSelect(question, option);">{{option.name}}</mat-checkbox>
             </div>
           </div>        
-        <div class="col-md-6" *ngFor="let option of question.options">
+<!--         <div class="col-md-6" *ngFor="let option of question.options">
           <div class="option">
             <label class="font-weight-normal" [attr.for]="option.id">
               <input id="{{option.id}}" type="checkbox" [(ngModel)]="option.selected" (change)="onSelect(question, option);" /> {{option.name}}
             </label>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <hr />
