Add light and Darkt theme

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -89,7 +89,7 @@
     position: absolute;
     bottom: 0;
     width: calc(100% - 30px);
-    background-color: #fafafa;
+    //background-color: #fafafa;
 }
 
 
