--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -5,9 +5,11 @@
       <mat-card-title>IIRS</mat-card-title>
       <mat-card-subtitle>ISRO</mat-card-subtitle>
     </mat-card-header> -->
-    <img mat-card-image src="https://cdn.dribbble.com/users/442994/screenshots/2795274/loader.gif" alt="Photo of a Shiba Inu">
+    <img mat-card-image src="assets/iirs-building.jpg" alt="Photo of a Shiba Inu">
+    <div class="caption">IIRS OUTREACH PROGRAMME</div>
     <mat-card-content>
-      <h5>Quiz will start shortly..!</h5>
+      <h5 class="color-hindi">प्रश्न मंच जल्द ही शुरु होगा.</h5>
+      <h5 class="color-english">Quiz will start shortly..!</h5>
     </mat-card-content>
     <mat-card-actions>
       <button mat-button>Quiz Rules</button>
