--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "my-theme.scss";
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
