--- a/src/app/components/layout/material-nav/material-nav.component.scss
+++ b/src/app/components/layout/material-nav/material-nav.component.scss
@@ -2,6 +2,20 @@
   height: 100%;
 }
 
+.app-name {
+  padding-top: .1rem;
+  font-family: Roboto,"Helvetica Neue",sans-serif;
+  line-height: normal;
+  .color1 {
+    color: orange;
+  }
+  .color2 {
+    color: #008CDB;
+    font-size: 1rem;
+    font-weight: 400;
+  }
+}
+
 .sidenav {
   width: 200px;
   box-shadow: 3px 0 6px rgba(0,0,0,.24);
