--- a/src/app/components/quiz/quiz.component.scss
+++ b/src/app/components/quiz/quiz.component.scss
@@ -1,3 +1,23 @@
 .card-w-400 {
   max-width: 400px;
 }
+
+.color-english {
+	color: #008CDB;
+}
+.color-hindi {
+	color: orange;
+}
+
+.caption { 
+	position: absolute; 
+	width: 100%;
+	line-height: 3rem; 
+	height: 50px; top: 0px; left: 0px; 
+	color: white; 
+	background: rgb(0, 0, 0);
+  	background: rgba(0, 0, 0, 0.5); /* Black see-through */
+	text-align:center; 
+	font-weight:bold; 
+	opacity:0.7; 
+}
