--- a/src/app/components/layout/material-nav/material-nav.component.scss
+++ b/src/app/components/layout/material-nav/material-nav.component.scss
@@ -20,7 +20,10 @@
   width: 200px;
   box-shadow: 3px 0 6px rgba(0,0,0,.24);
 }
-
+.sidenav-right {
+  width: 300px;
+  box-shadow: 3px 0 6px rgba(0,0,0,.24);
+}
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
