--- a/src/app/components/layout/material-nav/material-nav.component.html
+++ b/src/app/components/layout/material-nav/material-nav.component.html
@@ -45,6 +45,7 @@
 
       <!-- <span>Student Interaction</span> -->
         <span class="spacer"></span>
+        
         <div class="text-right app-name">
           <span class="color1">अंतरिक्ष प्रश्नमंच</span> <br>
           <span class="color2">SPACE QUIZ</span>
@@ -74,6 +75,13 @@
             <span>Logout</span>
           </button>
         </mat-menu>
+        <button
+          type="button"
+          aria-label="Toggle sidenav"
+          mat-icon-button
+          (click)="drawerRight.toggle()">
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        </button>
       
     </mat-toolbar>
     <!-- Add Content Here -->
@@ -109,4 +117,36 @@
       </mat-tab-group>
     </div> -->
   </mat-sidenav-content>
+  <mat-sidenav position="end"
+    #drawerRight
+    class="sidenav-right"
+    fixedInViewport="true"
+    [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'over'"
+    [opened]="false">
+    <mat-toolbar color="primary">
+      <img src="assets/isro-logo.png" alt="ISRO" width="50px">
+      <!-- <span class="spacer"></span>
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawerRight.toggle()"
+        *ngIf="!(isHandset$ | async)">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button> -->
+    </mat-toolbar>
+    
+    <mat-nav-list>
+      <a mat-list-item routerLink="quiz"><i class="material-icons">timer</i> Play</a>
+      <a mat-list-item routerLink="quizs"><i class="material-icons">timer</i> Quiz</a>
+      <a mat-list-item routerLink="questions"><i class="material-icons">question_answer</i> Question</a>
+      <!-- <a mat-list-item routerLink="faculty"><i class="material-icons">supervised_user_circle</i> Faculty</a>
+      <a mat-list-item routerLink="student"><i class="material-icons">school</i> Student</a> -->
+      <a mat-list-item routerLink="login" *ngIf="!authService.isLoggedIn()"><i class="material-icons">fingerprint</i> Login</a>
+      <!-- <a mat-list-item routerLink="books"><i class="material-icons">book</i> Book</a> -->
+      <a mat-list-item routerLink="chat"><i class="material-icons">chat</i> Chat</a>
+
+    </mat-nav-list>
+  </mat-sidenav>
 </mat-sidenav-container>
