Add online users and live lecture

--- a/src/app/components/offline-session/detail/offline-session-detail.component.html
+++ b/src/app/components/offline-session/detail/offline-session-detail.component.html
@@ -1,7 +1,7 @@
 <div class="button-row">
   <a mat-raised-button color="primary" [routerLink]="['/offline-session']"><mat-icon>list</mat-icon></a>
 </div>
-<mat-card class="example-card">
+<mat-card class="example-card" *ngIf="session">
   
   <mat-card-content>
     <div class="iframe-container">
