--- a/src/app/components/layout/material-nav/material-nav.component.html
+++ b/src/app/components/layout/material-nav/material-nav.component.html
@@ -20,14 +20,15 @@
     </mat-toolbar>
     
     <mat-nav-list>
-      <a mat-list-item routerLink="quiz" *ngIf="authService.isLoggedIn()"><i class="material-icons">timer</i> Play</a>
-      <a mat-list-item routerLink="offline-session" *ngIf="authService.isLoggedIn()"><i class="material-icons">timer</i> Offline Session</a>
-      <a mat-list-item routerLink="quizs" *ngIf="authService.isAdmin()"><i class="material-icons">timer</i> Quiz</a>
+      <a mat-list-item routerLink="quiz" *ngIf="authService.isLoggedIn()"><i class="material-icons">query_builder</i> Play</a>
+      <a mat-list-item routerLink="offline-session" *ngIf="authService.isLoggedIn()"><i class="material-icons">video_library</i> Offline Session</a>
+      <a mat-list-item routerLink="quizs" *ngIf="authService.isAdmin()"><i class="material-icons">import_contacts</i> Quiz</a>
       <!-- <a mat-list-item routerLink="questions"><i class="material-icons">question_answer</i> Question</a> -->
       <a mat-list-item routerLink="questions" *ngIf="authService.isAdmin()"><i class="material-icons">question_answer</i> Question </a>
       <!-- <a mat-list-item routerLink="faculty"><i class="material-icons">supervised_user_circle</i> Faculty</a>
       <a mat-list-item routerLink="student"><i class="material-icons">school</i> Student</a> -->
       <a mat-list-item routerLink="login" *ngIf="!authService.isLoggedIn()"><i class="material-icons">fingerprint</i> Login</a>
+      <a mat-list-item routerLink="online-users" *ngIf="authService.isAdmin()"><i class="material-icons">timer</i> Online Users</a>
       <!-- <a mat-list-item routerLink="books"><i class="material-icons">book</i> Book</a> -->
       <!-- <a mat-list-item routerLink="chat"><i class="material-icons">chat</i> Chat</a> -->
 
