--- a/src/app/components/quiz/quiz-list/quiz-list.component.scss
+++ b/src/app/components/quiz/quiz-list/quiz-list.component.scss
@@ -6,6 +6,14 @@
   overflow: auto;
 }
 
+.button-row {
+  margin: 10px 0;
+}
+.button-row button,
+.button-row a {
+  margin: 12px 12px 12px;
+}
+
 .isbn-col {
   flex: 0 0 100px !important;
   white-space: unset !important;
