--- a/src/app/components/quiz/quiz-list/quiz-list.component.scss
+++ b/src/app/components/quiz/quiz-list/quiz-list.component.scss
@@ -11,7 +11,7 @@
 }
 .button-row button,
 .button-row a {
-  margin: 12px 12px 12px;
+  margin-right: 12px;
 }
 
 .isbn-col {
@@ -25,4 +25,17 @@
 
 .example-full-width {
   width: 100%;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+td, th {
+  width: 25%;
 }
