--- a/src/app/components/online-users/online-users.component.html
+++ b/src/app/components/online-users/online-users.component.html
@@ -1,10 +1,10 @@
-    <div class="button-row">
-        <button *ngIf="onlineUsers" mat-raised-button color="primary" [matBadge]="onlineUsers.length" matBadgePosition="after" matBadgeColor="accent" (click)="getLastActiveUsers()"><mat-icon>refresh</mat-icon> Online Users</button>
-    </div>
+  <div class="button-row">
+      <button *ngIf="onlineUsers" mat-raised-button color="primary" [matBadge]="onlineUsers.length" matBadgePosition="after" matBadgeColor="accent" (click)="getLastActiveUsers()"><mat-icon>refresh</mat-icon> Online Users</button>
+  </div>
   <!-- <mat-divider></mat-divider> -->
-    <mat-form-field>
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-    </mat-form-field>
+  <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+  </mat-form-field>
   
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
