--- a/src/app/components/offline-session/list/offline-session.component.html
+++ b/src/app/components/offline-session/list/offline-session.component.html
@@ -4,7 +4,7 @@
       
         <mat-card class="example-card">
             <a [routerLink]="['/offline-session/', session.lecture_id]" >
-              <img mat-card-image src="http://img.youtube.com/vi/{{session.off_lecture_url}}/0.jpg" alt="Photo of a Shiba Inu" width="200px">
+              <img mat-card-image src="https://img.youtube.com/vi/{{session.off_lecture_url}}/0.jpg" alt="Photo of a Shiba Inu" width="200px">
             </a>
             <mat-card-footer>
               <h5>{{session.session_name}}</h5>
