--- a/src/app/components/quiz/quiz-detail/quiz-detail.component.html
+++ b/src/app/components/quiz/quiz-detail/quiz-detail.component.html
@@ -12,29 +12,35 @@
     </mat-expansion-panel-header>
     <div class="row">
       <div class="col">
-        <mat-card-content>
-          <dl>
-            <dt>Quiz Name:</dt>
-            <dd>{{quiz.name}}</dd>
-            <dt>Questions:</dt>
-            <dd *ngFor="let question of quiz.questions">
-              {{question.name}}
-            </dd>
-            <dt>Status:</dt>
-            <dd>{{quiz.status}}</dd>
-            <dt>Publish Year:</dt>
-            <dd>{{quiz.created}}</dd>
-            <dt>Update Date:</dt>
-            <dd>{{quiz.created | date}}</dd>
-          </dl>
-        </mat-card-content>
-        <mat-card-actions class="button-row">
-          <a mat-raised-button color="primary" [routerLink]="['/quiz-edit', quiz._id]"><mat-icon>edit</mat-icon></a>
-          <a mat-raised-button color="warn" (click)="deleteQuiz(quiz._id)"><mat-icon>delete</mat-icon></a>
-        </mat-card-actions>
+        <mat-card class="example-card">
+          <mat-card-header>
+            <mat-card-title>{{quiz.name}}</mat-card-title>
+            <mat-card-subtitle>{{quiz.description}}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <dl>
+              <dt>Quiz Name:</dt>
+              <dd>{{quiz.name}}</dd>
+              <dt>Questions:</dt>
+              <dd *ngFor="let question of quiz.questions">
+                {{question.name}}
+              </dd>
+              <dt>Status:</dt>
+              <dd>{{quiz.status}}</dd>
+              <dt>Publish Year:</dt>
+              <dd>{{quiz.created}}</dd>
+              <dt>Update Date:</dt>
+              <dd>{{quiz.created | date}}</dd>
+            </dl>
+          </mat-card-content>
+          <mat-card-actions>
+            <a mat-raised-button color="primary" [routerLink]="['/quiz-edit', quiz._id]"><mat-icon>edit</mat-icon></a>
+            <a mat-raised-button color="warn" (click)="deleteQuiz(quiz._id)"><mat-icon>delete</mat-icon></a>
+          </mat-card-actions>
+        </mat-card>
       </div>
       <div class="col">
-        <!-- <app-quiz></app-quiz> -->
+        <app-quiz></app-quiz>
       </div>
     </div>
   </mat-expansion-panel>
