--- a/src/app/components/quiz/quiz-list/quiz-list.component.html
+++ b/src/app/components/quiz/quiz-list/quiz-list.component.html
@@ -32,7 +32,12 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
         <td mat-cell *matCellDef="let row"> {{row.description}} </td>
       </ng-container>
-  
+
+      <!-- Duration Column -->
+      <ng-container matColumnDef="duration">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration </th>
+        <td mat-cell *matCellDef="let row"> {{row.duration}} Sec</td>
+      </ng-container>
   
       <!-- Color Column -->
       <ng-container matColumnDef="created">
